crates/wdl-analysis/tests/validation/import-namespace-invalid/source.wdl
## This is a test of an import statement with an invalid namespace

version 1.1

import "invalid-namespace.wdl"

workflow test {
}
